Update Facebook SDK to 4.36.0
- LEARNER-5572

--- a/OpenEdXMobile/AndroidManifest.xml
+++ b/OpenEdXMobile/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="org.edx.mobile"
     android:installLocation="auto">
 
@@ -38,6 +39,7 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        tools:replace="android:supportsRtl"
         android:supportsRtl="${supportsRtl}"
         android:theme="@style/AppTheme">
 
@@ -264,7 +266,22 @@
         </receiver>
 
         <!-- Setup Facebook -->
-        <activity android:name="com.facebook.LoginActivity" />
+        <meta-data android:name="com.facebook.sdk.ApplicationId"
+            android:value="${facebookAppId}"/>
+        <activity android:name="com.facebook.FacebookActivity"
+            android:configChanges=
+                "keyboard|keyboardHidden|screenLayout|screenSize|orientation"
+            android:label="@string/app_name" />
+        <activity
+            android:name="com.facebook.CustomTabActivity"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+                <data android:scheme="${fbLoginProtocolScheme}" />
+            </intent-filter>
+        </activity>
 
         <!-- Setup Google -->
         <meta-data
